tests/NormalTests/paczka1/fuzzy1/33143587.err
Error in line 2: XiUL8 A685 36,1
Error in line 4: XiUL8 A765 6,8
Error in line 12: S709 A765 31,8
Error in line 15: kfxdk S709 41,5
Error in line 20: 2HWP A685 50,8
Error in line 23: 2HWP A314 17,3
Error in line 29: kfxdk S709 25,39
Error in line 31: kfxdk S709 69,7
